# relay_pick_and_place

./: README.md
dualarm_exhibition/: CMakeLists.txt  package.xml
dualarm_exhibition/config/: left_arm_controller.yaml  left_arm_driver.yaml  left_gripper_controller.yaml  left_gripper_driver_canopen_motor_node.yaml  rviz_config.rviz
dualarm_exhibition/launch/: dualarm_urdf.launch  robot.launch
dualarm_exhibition/meshes/: Zweiarm_Ausleger.stl  Zweiarm_Ausleger_collision.stl  Zweiarm_Ausleger_convex.stlb  box.stl  tischmodul_2.stl  tischmodul_2_collision.stl  tischmodul_2_convex.stlb
dualarm_exhibition/urdf/: dualarm_prbt.gv  dualarm_prbt.urdf.xacro  dualarmprbt.urdf  left_arm_macro.xacro  right_arm_macro.xacro  tischmodul.urdf.xacro
dualarm_moveit_config/: .setup_assistant  package.xml
dualarm_moveit_config/config/: controllers_dualarm.yaml  dualarm_prbt.srdf  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
dualarm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  dualarm_planning_execution.launch  dualarm_prbt_moveit_controller_manager.launch.xml  gazebo.launch  (+11 more)
relay_pick_and_place/: CMakeLists.txt  package.xml
relay_pick_and_place/config/: prbt.srdf.xacro
relay_pick_and_place/launch/: relay_pick_and_place.launch
relay_pick_and_place/msg/: Pause.msg
relay_pick_and_place/scripts/: pause_movement_client.py  relay_pick_place.py
relay_pick_and_place/srv/: PauseMovement.srv
relay_pick_and_place/urdf/: relay_pick_and_place.xacro
