<?xml version="1.0"?>
<package format="2">
  <name>relay_pick_and_place</name>
  <version>0.1.0</version>
  <description>Startup a PRBT manipulator module from ROS and move it.</description>
  
  <maintainer email="ros@pilz.de">Pilz GmbH and Co. KG</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/pilz_robots</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>prbt_moveit_config</exec_depend>
  <exec_depend>pilz_robot_programming</exec_depend>

</package>
